Made changes in branch1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+
+    <!--Making some code changes in branch1 of git-->
     <div class="signup"><a href="contact.html">Sign Up</a></div>
 </body>
 </html>
