--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <!--Making some code changes in branch1 of git-->
+    <!--This is in branch1-->
     <div class="signup"><a href="contact.html">Sign Up</a></div>
 </body>
 </html>
