--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!--Making some code changes in branch1 of git-->
     <!--This is in master branch-->
     <!--This is in branch1-->
+
+    <!--These are changes by other Developer-->
     <div class="signup"><a href="contact.html">Sign Up</a></div>
 </body>
 </html>
